--- a/arquivos_css/area3.css
+++ b/arquivos_css/area3.css
@@ -2,7 +2,7 @@
     background-color: var(--cinza-background);
     display: flex;
     justify-content: center;
-    padding: 1% 0;
+    padding: 1% 0 2% 0;
     margin: 2.5% 0;
 }
 
